--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
         </div>
     </div>
     <div class="watermark">Made By: Jamison Coombs</div>
+    <audio preload="auto">
+        <source src="sounds/E.wav" type="audio/wav">
+        <source src="sounds/A.wav" type="audio/wav">
+        <source src="sounds/D.wav" type="audio/wav">
+        <source src="sounds/G.wav" type="audio/wav">
+        <source src="sounds/F.wav" type="audio/wav">
+        <source src="sounds/C.wav" type="audio/wav">
+    </audio>
 </body>
 <!----------------SCRIPTS--------------->
     <script src="script.js"></script>
